# key_exchange_example

./: .gitignore  README.md  pyproject.toml
src/tls_key_exchange/: __init__.py  client_csock.py  client_http.py  server_csock.py  server_http.py
src/tls_key_exchange/app/: app.py
src/tls_key_exchange/cert/: cert.py
src/tls_key_exchange/device/: device.py
